--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
